changes/data-changed

--- a/src/utils/theme.css
+++ b/src/utils/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primaryColor: #66b58f;
+  --primaryColor: #53E1FA;
   --primaryDark: #428866;
   --backgroundPrimary: #ecf0f3;
   --backgroundSecondary: #e2e8ec;
